# WIDSS

./: .gitignore  Battery_SoH_Week3.ipynb  Battery_SoH_Week3_updated.ipynb  Battery_SoH_Week4_SPM_Transformer.ipynb  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
scripts/: train_soc_lstm.py  train_soh_lstm.py
src/widss/: SECURITY  __init__.py  dataset.py  degradation.py  evaluation.py  model.py  push pull request template  simulation.py
src/widss.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_dataset.py  test_degradation.py  test_evaluation.py  test_model.py  test_simulation.py
