[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "widss"
version = "0.1.0"
description = "AI-driven battery state estimation framework (SOC & SOH)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "pritam-09-ops" }]
keywords = ["battery", "state-of-charge", "SOC", "SOH", "LSTM", "deep-learning", "EV"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.13"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0",
  "isort>=5.13",
  "flake8>=7.0",
  "mypy>=1.8",
]
all = ["widss[tensorflow,dev]"]

[project.urls]
Homepage = "https://github.com/pritam-09-ops/WIDSS"
Repository = "https://github.com/pritam-09-ops/WIDSS"
"Bug Tracker" = "https://github.com/pritam-09-ops/WIDSS/issues"
Changelog = "https://github.com/pritam-09-ops/WIDSS/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["widss"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

